Instant IPC: Always run Mojo return value callbacks

If we don't, Mojo gets unhappy and DCHECKs.
Followup to crrev.com/c/695227, which introduced the Mojo return values.

Bug: 772191
Change-Id: I55daeff424217cfe622c5364ae960bea723f94f4
Reviewed-on: https://chromium-review.googlesource.com/704734
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507339}
Former-commit-id: 16c803a1c68bf3a1c46d7d524350feac4a743c91